# market-intelligence-platform

./: .env.example  .gitignore  README.md  pyproject.toml
hltrader/: __init__.py  __main__.py  alert_xdedupe.py  cli.py  client.py  config.py  models.py  notify.py
hltrader/analysis/: __init__.py  adaptive_weights.py  conviction.py  regime.py  state_builder.py  token_memory.py
hltrader/commands/: __init__.py  bracket.py  conviction_cmd.py  evaluate.py  positions.py  regime_cmd.py  risk_check.py  scan.py  selftest.py  state_cmd.py  stop.py  token_memory_cmd.py  weights_cmd.py
hltrader/compat/: __init__.py  nice_funcs.py
hltrader/eval/: __init__.py  outcomes.py
hltrader/orders/: __init__.py  bracket.py  trigger.py  validation.py
hltrader/risk/: __init__.py  monitor.py  reconcile.py  stop_loss.py  trailing.py
hltrader/scan/: __init__.py  candles.py  cluster.py  pump_fade.py  scorer.py  watcher.py
migrations/: 021_add_cluster_type.sql  022_adaptive_signal_weights.sql  023_token_personality_memory.sql
tests/: conftest.py  test_adaptive_weights.py  test_alert_outcomes.py  test_alert_xdedupe.py  test_cluster.py  test_conviction.py  test_conviction_41.py  test_hl_eval_fallback.py  test_notify.py  test_phase2_signals.py  test_pump_fade.py  test_reconcile.py  test_regime.py  test_scorer.py  test_state.py  test_stop_loss.py  test_token_memory.py  test_validation.py  test_watcher.py
